--- a/src/podia/styles/components/banner/banner-menu.css
+++ b/src/podia/styles/components/banner/banner-menu.css
@@ -1,7 +1,6 @@
 .banner__menu-items {
 	list-style: none;
 	display: flex;
-	align-items: center;
 	flex-wrap: wrap;
 	gap: 2rem;
 }
